Tue May 30 14:34:07 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/array.idl:
          Added FourDArray as testcase

Tue May 30 14:24:07 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:
          Generate false instead of 0

        * TAO_IDL/be/be_visitor_valuetype/marshal_cs.cpp:
          Const improvement to generated code

        * TAO_IDL/be/be_visitor_operation/amh_rh_ss.cpp:
          Fixed 64bit conversion warning

        * TAO_IDL/be/be_visitor_interface/interface_ss.cpp:
          Const improvement to generated code and use false instead of 0

Tue May 30 14:10:07 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Marshal.cpp:
        * tao/AnyTypeCode/Marshal.inl:
        * tao/AnyTypeCode/skip.cpp:
        * tao/AnyTypeCode/Any_Unknown_IDL_Type.cpp:
        * tao/AnyTypeCode/Any.cpp:
        * tao/CodecFactory/CDR_Encaps_Codec.cpp:
        * tao/PI/PI.cpp:
          Use true/false and const improvements

Tue May 30 13:42:07 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.{h,cpp}:
          Removed the buffer as member, let the cdr stream get the buffer
          from the allocator. This allocation is just done once at the
          creation so this shouldn't impact performance a lot. Also use
          the size argument passed to the constructor, specific protocol
          implementations to pass this down to its base to set a
          specific initial buffer size.

Tue May 30 10:04:07 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2543_Regression/bug_2543_regression.cpp:
        * tests/Bug_2542_Regression/bug_2542_regression.cpp:
          Fixed conversion warnings

Tue May 30 01:59:07 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:

          Changed set_records_attribute() to iterate through all the