@@ -1,3 +1,9 @@
+Tue May 30 15:53:50 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp (set_records_attribute):
+
+          Commented out unused argument.
+
 Tue May 30 14:34:07 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/IDL_Test/array.idl:
